feat: add MRL label and description to translation files

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -505,5 +505,9 @@
       "all": "No notifications 🤐",
       "unread": "No new notifications 🤐"
     }
-  }
+  },
+  "mrl": {
+  "label": "MRL (Maximum Residue Level)",
+  "description": "Maximum allowed residue level in agricultural products to ensure health safety."
+}
 }
