feat: add logo and update authentication page title

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -168,7 +168,7 @@
       },
       "signin": "Sign in",
       "signup": "Sign up",
-      "title": "Sign in to your account"
+      "title": "Welcome to BFarmX Inspection"
     },
     "register": {
       "buttons": {
