--- a/public/locales/vi.json
+++ b/public/locales/vi.json
@@ -168,7 +168,7 @@
       },
       "signin": "Đăng nhập",
       "signup": "Đăng ký",
-      "title": "Đăng nhập vào tài khoản của bạn"
+      "title": "Chào mừng đến với BFarmX kiểm định"
     },
     "register": {
       "buttons": {
